--- a/src/tailwind/output.css
+++ b/src/tailwind/output.css
@@ -545,6 +545,10 @@ video {
   display: none;
 }
 
+.pointer-events-none {
+  pointer-events: none;
+}
+
 .absolute {
   position: absolute;
 }
@@ -553,60 +557,36 @@ video {
   position: relative;
 }
 
-.top-0 {
-  top: 0px;
+.left-2\/4 {
+  left: 50%;
 }
 
-.top-5 {
-  top: 1.25rem;
+.top-0 {
+  top: 0px;
 }
 
 .top-2\/4 {
   top: 50%;
 }
 
-.top-1\/4 {
-  top: 25%;
+.top-20 {
+  top: 5rem;
 }
 
-.top-1 {
-  top: 0.25rem;
+.-z-10 {
+  z-index: -10;
 }
 
-.left-2\/4 {
-  left: 50%;
-}
-
-.top-\[-\] {
-  top: -;
-}
-
-.top-\[10px\] {
-  top: 10px;
-}
-
-.top-\[10\[x\]\] {
-  top: 10[x];
-}
-
-.top-\[-50px\] {
-  top: -50px;
-}
-
-.top-\[-20px\] {
-  top: -20px;
+.-z-20 {
+  z-index: -20;
 }
 
 .z-10 {
   z-index: 10;
 }
 
-.z-0 {
-  z-index: 0;
-}
-
-.-z-10 {
-  z-index: -10;
+.z-20 {
+  z-index: 20;
 }
 
 .col-span-1 {
@@ -621,78 +601,32 @@ video {
   display: grid;
 }
 
-.h-screen {
-  height: 100vh;
-}
-
-.h-60 {
-  height: 15rem;
-}
-
-.h-5 {
-  height: 1.25rem;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-full {
-  height: 100%;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
-.h-10 {
-  height: 2.5rem;
-}
-
-.h-12 {
-  height: 3rem;
+.h-28 {
+  height: 7rem;
 }
 
 .h-40 {
   height: 10rem;
 }
 
-.h-32 {
-  height: 8rem;
+.h-full {
+  height: 100%;
+}
+
+.h-screen {
+  height: 100vh;
+}
+
+.w-28 {
+  width: 7rem;
+}
+
+.w-40 {
+  width: 10rem;
 }
 
 .w-full {
   width: 100%;
-}
-
-.w-20 {
-  width: 5rem;
-}
-
-.w-56 {
-  width: 14rem;
-}
-
-.w-10 {
-  width: 2.5rem;
-}
-
-.w-12 {
-  width: 3rem;
-}
-
-.w-32 {
-  width: 8rem;
-}
-
-.-translate-y-2\/4 {
-  --tw-translate-y: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
-.-translate-x-2\/4 {
-  --tw-translate-x: -50%;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .-translate-x-1\/2 {
@@ -725,14 +659,8 @@ video {
   justify-content: center;
 }
 
-.bg-slate-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(100 116 139 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+.gap-2 {
+  gap: 0.5rem;
 }
 
 .bg-transparent {
@@ -747,16 +675,61 @@ video {
   font-size: 40px;
 }
 
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
+.text-\[red\] {
+  --tw-text-opacity: 1;
+  color: rgb(255 0 0 / var(--tw-text-opacity));
+}
+
+.opacity-100 {
+  opacity: 1;
+}
+
+.opacity-0 {
+  opacity: 0;
 }
 
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
+}
+
+.transition-opacity {
+  transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.duration-1000 {
+  transition-duration: 1000ms;
+}
+
+.duration-500 {
+  transition-duration: 500ms;
+}
+
+.duration-\[5000\] {
+  transition-duration: 5000;
+}
+
+.duration-\[2000s\] {
+  transition-duration: 2000s;
+}
+
+.duration-0 {
+  transition-duration: 0s;
+}
+
+.duration-\[3000s\] {
+  transition-duration: 3000s;
+}
+
+.duration-\[1000s\] {
+  transition-duration: 1000s;
+}
+
+.duration-\[1000ms\] {
+  transition-duration: 1000ms;
 }
 
 .ease-in-out {
